--- a/frontend/src/app/features/auth/login/login.component.html
+++ b/frontend/src/app/features/auth/login/login.component.html
@@ -7,12 +7,12 @@
 
   <mat-form-field class="form-field">
     <mat-label>Email</mat-label>
-    <input type="email" matInput formControlName="email"
-           placeholder="example@test.com">
-    @if (emailControl && emailControl.hasError('email') && !emailControl.hasError('required')) {
+    <input type="email" matInput formControlName="email" placeholder="test@example.com">
+    <mat-icon matSuffix>email</mat-icon>
+    @if (emailControl?.hasError('email') && !emailControl?.hasError('required')) {
       <mat-error>Please enter a valid email address</mat-error>
     }
-    @if (emailControl && emailControl.hasError('required')) {
+    @if (emailControl?.hasError('required')) {
       <mat-error>Email is required</mat-error>
     }
   </mat-form-field>
@@ -29,14 +29,13 @@
     >
       <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
-    @if (passwordControl && passwordControl.hasError('required')) {
+    @if (passwordControl?.hasError('required')) {
       <mat-error>Password is required</mat-error>
     }
-    @if (passwordControl && passwordControl.hasError('minlength')) {
+    @if (passwordControl?.hasError('minlength')) {
       <mat-error>Password must be at least 6 characters long.</mat-error>
     }
   </mat-form-field>
 
-  <button mat-flat-button type="submit">Login</button>
-
+  <button mat-flat-button type="submit">Sign In</button>
 </form>
