feat: auth service, async validation for email

--- a/frontend/src/app/shared/layouts/header/header.component.html
+++ b/frontend/src/app/shared/layouts/header/header.component.html
@@ -14,14 +14,14 @@
     </nav>
 
     <div class="header__search">
-      <img ngSrc="/assets/svg/search.svg" alt="search" height="16" width="16">
+      <img ngSrc="/assets/svgs/search.svg" alt="search" height="16" width="16">
       <span class="header__search-text">Search...</span>
     </div>
 
     <div class="header__user-actions">
       <div class="header__cart">
         <a href="#">
-          <img ngSrc="/assets/svg/cart.svg" alt="cart" height="18" width="21">
+          <img ngSrc="/assets/svgs/cart.svg" alt="cart" height="18" width="21">
           <span>9+</span>
         </a>
       </div>
