--- a/frontend/src/app/features/auth/register/register.component.html
+++ b/frontend/src/app/features/auth/register/register.component.html
@@ -5,6 +5,8 @@
 >
   <h1>Register</h1>
 
+  <span>{{ registerForm.controls.email.errors | json }}</span>
+
   <mat-form-field class="form-field">
     <mat-label>First name</mat-label>
     <input type="text" matInput formControlName="firstName"/>
@@ -24,11 +26,8 @@
     <mat-label>Phone</mat-label>
     <input type="tel" matInput formControlName="phone" placeholder="099777333"/>
     <mat-icon matSuffix>phone</mat-icon>
-    @if (phoneControl?.hasError('pattern') && !phoneControl?.hasError('required')) {
+    @if (registerForm.controls.phone.errors?.['pattern']) {
       <mat-error>Phone number must contain 10 digits</mat-error>
-    }
-    @if (phoneControl?.hasError('required')) {
-      <mat-error>Phone is required</mat-error>
     }
   </mat-form-field>
 
@@ -36,11 +35,14 @@
     <mat-label>Email</mat-label>
     <input type="email" matInput formControlName="email" placeholder="test@example.com"/>
     <mat-icon matSuffix>email</mat-icon>
-    @if (emailControl?.hasError('email') && !emailControl?.hasError('required')) {
+    @if (registerForm.controls.email.errors?.['email'] && !registerForm.controls.email.errors?.['required']) {
       <mat-error>Please enter a valid email address</mat-error>
     }
-    @if (emailControl?.hasError('required')) {
+    @if (registerForm.controls.email.errors?.['required']) {
       <mat-error>Email is required</mat-error>
+    }
+    @if (registerForm.controls.email.errors?.['emailTaken']) {
+      <mat-error>Email is already taken</mat-error>
     }
   </mat-form-field>
 
@@ -56,10 +58,10 @@
     >
       <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
-    @if (passwordControl?.hasError('required')) {
+    @if (registerForm.controls.password.errors?.['required']) {
       <mat-error>Password is required</mat-error>
     }
-    @if (passwordControl?.hasError('minlength')) {
+    @if (registerForm.controls.password.errors?.['minlength']) {
       <mat-error>Password must be at least 6 characters long.</mat-error>
     }
   </mat-form-field>
