--- a/frontend/src/app/features/auth/register/register.component.html
+++ b/frontend/src/app/features/auth/register/register.component.html
@@ -3,26 +3,24 @@
   [formGroup]="registerForm"
   (ngSubmit)="onSubmit()"
 >
-  <h1>Register</h1>
+  <span class="register-form__title">Register</span>
 
-  <span>{{ registerForm.controls.email.errors | json }}</span>
-
-  <mat-form-field class="form-field">
+  <mat-form-field class="register-form__input" appearance="outline">
     <mat-label>First name</mat-label>
     <input type="text" matInput formControlName="firstName"/>
   </mat-form-field>
 
-  <mat-form-field class="form-field">
+  <mat-form-field class="register-form__input" appearance="outline">
     <mat-label>Middle name</mat-label>
     <input type="text" matInput formControlName="middleName"/>
   </mat-form-field>
 
-  <mat-form-field class="form-field">
+  <mat-form-field class="register-form__input" appearance="outline">
     <mat-label>Last name</mat-label>
     <input type="text" matInput formControlName="lastName"/>
   </mat-form-field>
 
-  <mat-form-field class="form-field">
+  <mat-form-field class="register-form__input" appearance="outline">
     <mat-label>Phone</mat-label>
     <input type="tel" matInput formControlName="phone" placeholder="099777333"/>
     <mat-icon matSuffix>phone</mat-icon>
@@ -31,11 +29,11 @@
     }
   </mat-form-field>
 
-  <mat-form-field class="form-field">
+  <mat-form-field class="register-form__input" appearance="outline">
     <mat-label>Email</mat-label>
     <input type="email" matInput formControlName="email" placeholder="test@example.com"/>
     <mat-icon matSuffix>email</mat-icon>
-    @if (registerForm.controls.email.errors?.['email'] && !registerForm.controls.email.errors?.['required']) {
+    @if (registerForm.controls.email.errors?.['email']) {
       <mat-error>Please enter a valid email address</mat-error>
     }
     @if (registerForm.controls.email.errors?.['required']) {
@@ -46,17 +44,17 @@
     }
   </mat-form-field>
 
-  <mat-form-field class="form-field">
+  <mat-form-field class="register-form__input" appearance="outline">
     <mat-label>Password</mat-label>
-    <input matInput formControlName="password" [type]="hide() ? 'password' : 'text'" />
+    <input matInput formControlName="password" [type]="isPasswordVisible() ? 'text' : 'password'"/>
     <button
       type="button"
       mat-icon-button
       matSuffix
-      (click)="clickEvent($event)"
-      [attr.aria-pressed]="hide()"
+      (click)="isPasswordVisible.set(!this.isPasswordVisible())"
+      [attr.aria-pressed]="isPasswordVisible()"
     >
-      <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
+      <mat-icon>{{ isPasswordVisible() ? 'visibility' : 'visibility_off' }}</mat-icon>
     </button>
     @if (registerForm.controls.password.errors?.['required']) {
       <mat-error>Password is required</mat-error>
@@ -67,5 +65,7 @@
   </mat-form-field>
 
   <button mat-flat-button type="submit">Sign Up</button>
+
+  <span class="register-form__have-account">I have account</span>
 
 </form>
