--- a/frontend/src/app/features/auth/register/register.component.scss
+++ b/frontend/src/app/features/auth/register/register.component.scss
@@ -5,15 +5,27 @@
   justify-content: center;
 }
 
-h1 {
-  margin-bottom: 12px;
-}
-
 .register-form {
   display: grid;
   grid-template-columns: 300px;
+  border: 1px, solid, var(--grey-dark);
+  padding: 20px 25px;
+  border-radius: 5px;
 }
 
-.form-field {
+.register-form__title {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 12px;
+  font-size: 32px;
+  font-weight: 500;
+}2
+
+.register-form__input {
+  margin-top: 5px;
   margin-bottom: 5px;
+}
+
+.register-form__have-account {
+
 }
