--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,9 +1,32 @@
 @use "fonts";
+@use '@angular/material' as mat;
 
 :root {
   --dark-color: #000000;
   --light-color: #EFF2F6;
-  --grey-color: #C4C4C4;
+  --grey-light: #C4C4C4;
+  --grey-dark: #939393;
+}
+
+html {
+  @include mat.theme((
+    typography: (
+      plain-family: Inter,
+      brand-family: sans-serif,
+      bold-weight: 900,
+      medium-weight: 600,
+      regular-weight: 400,
+    ),
+    density: 0,
+  ));
+}
+
+html, body {
+  height: 100%;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
 }
 
 body {
@@ -11,15 +34,4 @@ body {
   background-color: var(--light-color);
   color: var(--dark-color);
   margin: 0;
-}
-
-.container {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
-button {
-  all: unset;
-  cursor: pointer;
 }
