--- a/frontend/src/app/shared/layouts/header/header.component.html
+++ b/frontend/src/app/shared/layouts/header/header.component.html
@@ -6,7 +6,7 @@
 <!--    >-->
 <!--      <span class="visually-hidden">Open navigation menu</span>-->
 <!--    </button>-->
-    <app-logo></app-logo>
+    <app-logo class="header__logo"></app-logo>
     <nav class="header__menu hidden-mobile">
       <ul class="header__menu-list">
         <li class="header__menu-item header__menu-item--active">
