--- a/frontend/src/app/shared/components/user-actions/cart-action/cart-action.component.scss
+++ b/frontend/src/app/shared/components/user-actions/cart-action/cart-action.component.scss
@@ -1,15 +1,14 @@
 @use 'mixins' as *;
 
 .cart-action {
-  @include flex-center(true);
-
+  display: inline-flex;
+  align-items: center;
   cursor: pointer;
   column-gap: 5px;
 
   &__badge {
     @include flex-center;
 
-    position: relative;
     min-width: 20px;
     width: 20px;
     height: 20px;
@@ -19,5 +18,11 @@
     font-weight: 700;
     border-radius: 50%;
     text-align: center;
+
+    &--large {
+      min-width: 24px;
+      width: 24px;
+      height: 24px;
+    }
   }
 }
