--- a/frontend/src/app/shared/layouts/header/header.component.scss
+++ b/frontend/src/app/shared/layouts/header/header.component.scss
@@ -1,4 +1,5 @@
 @use 'media' as *;
+@use 'mixins' as *;
 
 .header {
   display: flex;
@@ -7,16 +8,14 @@
 
   &__inner {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     width: 100%;
   }
 
   &__menu {
-    font-size: 14px;
-
     &-list {
       display: flex;
-      align-items: center;
       column-gap: 40px;
     }
 
@@ -28,7 +27,6 @@
 
     &-link {
       position: relative;
-      display: inline-flex;
       align-items: center;
       height: 28px;
 
@@ -55,7 +53,7 @@
   &__action {
     display: flex;
     align-items: center;
-    gap: 16px;
+    column-gap: 16px;
 
     &-search {
       min-width: 24px;
