--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -23,6 +23,7 @@ a {
 .h1, .h2, .h3, .h4, .h5, .h6, .h7 {
   font-family: var(--font-family-heading);
   font-weight: 500;
+  color: var(--neutral-7-color);
 }
 
 .h1 {
