--- a/frontend/src/app/shared/components/logo/logo.component.html
+++ b/frontend/src/app/shared/components/logo/logo.component.html
@@ -1,8 +1,7 @@
-<a href="/" class="logo__link">
-  <span
-    class="logo__text"
-    [ngStyle]="{'font-size': fontSize}"
-  >
-    Impressia.
-  </span>
-</a>
+<div class="logo">
+  <a href="/" class="logo__link">
+    <span class="logo__text">
+      Impressia.
+    </span>
+  </a>
+</div>
