--- a/frontend/src/app/shared/components/user-actions/cart-action/cart-action.component.html
+++ b/frontend/src/app/shared/components/user-actions/cart-action/cart-action.component.html
@@ -1,5 +1,6 @@
 <div class="cart-action" (click)="toggleCart()">
   <img
+    class="cart-action__image"
     ngSrc="/assets/svgs/shopping-bag.svg"
     height="24"
     width="24"
