--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -25,5 +25,11 @@
   --button-height-medium: 52px;
   --button-height-large: 72px;
 
+  --button-font-size-xl: 26px;
+  --button-font-size-l: 22px;
+  --button-font-size-m: 18px;
+  --button-font-size-s: 16px;
+  --button-font-size-xs: 14px;
+
   --transition-duration: 0.2s;
 }
