feat: auth pages, custom input & checkbox

--- a/frontend/src/app/shared/components/button/button.component.html
+++ b/frontend/src/app/shared/components/button/button.component.html
@@ -1,7 +1,6 @@
 <button
   [ngClass]="buttonClasses"
-  [style.height]="height"
-  [style.width]="width"
+  [type]="type"
 >
   <span [ngClass]="spanClasses">{{ label }}</span>
 </button>
