--- a/frontend/src/app/shared/components/input/input.component.html
+++ b/frontend/src/app/shared/components/input/input.component.html
@@ -1,4 +1,4 @@
-<div class="input-field" (click)="focusInputControl()">
+<div class="input-field">
   <div class="input-field__inner">
     <div class="input-field__prefix">
       <ng-container [ngTemplateOutlet]="prefixTemplate()?.template || getPrefixTemplate() || emptyTemplate"/>
@@ -7,28 +7,40 @@
       class="input-field__control"
       [placeholder]="placeholder"
       [type]="type"
-      #inputControl
+      [value]="value"
+      (input)="onInputChange($event)"
+      (blur)="onBlur()"
     />
     <div class="input-field__suffix">
       <ng-container [ngTemplateOutlet]="suffixTemplate()?.template || getSuffixTemplate() || emptyTemplate"/>
     </div>
   </div>
+  @if (showError) {
+    <div class="input-field__error">
+      <ng-content select="[slot='error']"></ng-content>
+    </div>
+  }
 </div>
+
 
 <ng-template #emptyTemplate/>
 
-<ng-template #passwordPrefix>
-  <span>passwordPrefixTemplate</span>
-</ng-template>
-
 <ng-template #passwordSuffix>
-  <span>passwordSuffixTemplate</span>
-</ng-template>
-
-<ng-template #emailPrefix>
-  <span>emailPrefixTemplate</span>
-</ng-template>
-
-<ng-template #emailSuffix>
-  <span>emailSuffixTemplate</span>
+  <div class="input-field__visibility-icon" (click)="togglePasswordVisibility()">
+    @if (isPasswordHidden()) {
+      <img
+        ngSrc="/assets/svgs/visibility_of.svg"
+        height="24"
+        width="24"
+        alt=""
+      />
+    } @else {
+      <img
+        ngSrc="/assets/svgs/visibility.svg"
+        height="24"
+        width="24"
+        alt=""
+      />
+    }
+  </div>
 </ng-template>
