--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -3,6 +3,7 @@
   --primary-color: #000000;
   --secondary-color: #25b576;
   --secondary-alt-color: #0238a4;
+  --red-color: #FF3333;
   --neutral-1-color: #FEFEFE;
   --neutral-2-color: #F3F5F7;
   --neutral-3-color: #E8ECEF;
