--- a/frontend/src/app/shared/components/input/input.component.scss
+++ b/frontend/src/app/shared/components/input/input.component.scss
@@ -1,43 +1,62 @@
+:host {
+  display: block;
+}
+
 .input-field {
-  position: relative;
-  transition-duration: var(--transition-duration);
-  cursor: text;
-
-  &::after {
-    content: "";
-    position: absolute;
-    height: 1px;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    background-color: var(--neutral-3-color);
-  }
-
-  &__inner {
-    display: flex;
-    align-items: center;
-  }
-
-  &__prefix,
-  &__suffix {
-    user-select: none;
-  }
-
-  &__control {
-    font-size: 16px;
-    padding: 12px 8px;
-    border: none;
-    outline: none;
-    width: 100%;
-    color: var(--neutral-7-color);
-  }
+  width: 100%;
+  height: 100%;
 
   &:focus {
     outline: none;
   }
 
+  &__inner {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
+    transition-duration: var(--transition-duration);
+
+    &::after {
+      content: "";
+      position: absolute;
+      height: 1px;
+      width: 100%;
+      bottom: 0;
+      left: 0;
+      background-color: var(--neutral-3-color);
+    }
+  }
+
+  &__prefix,
+  &__suffix {
+    width: auto;
+    user-select: none;
+  }
+
+  &__control {
+    padding-left: 5px;
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    color: var(--neutral-7-color);
+  }
+
   &__control:focus,
-  &:focus-within {
+  &__inner:focus-within {
     background-color: var(--neutral-2-color);
+  }
+
+  &__error {
+    color: var(--red-color);
+    font-size: 14px;
+    padding-left: 5px;
+    padding-top: 2px;
+  }
+
+  &__visibility-icon {
+    min-width: 24px;
+    cursor: pointer;
   }
 }
