fix: bug fix and code refactor

--- a/frontend/src/app/features/auth/login-form/login-form.component.html
+++ b/frontend/src/app/features/auth/login-form/login-form.component.html
@@ -3,7 +3,7 @@
     <h4 class="h4">Sign In</h4>
     <div class="login-form__prompt">
         <span>
-          Don’t have an account yet?  <a href="#" class="login-form__prompt-link">Sign Up</a>
+          Don’t have an account yet?  <a href="auth/register" class="login-form__prompt-link">Sign Up</a>
         </span>
     </div>
   </div>
