--- a/frontend/src/app/shared/components/cart-drawer/cart-drawer.component.html
+++ b/frontend/src/app/shared/components/cart-drawer/cart-drawer.component.html
@@ -38,7 +38,7 @@
         <app-button
           class="cart-drawer__button-cart"
           label="View Cart"
-          style="outlined"
+          [style]="'outlined'"
         />
       </div>
     </div>
