--- a/frontend/src/app/shared/components/button/button.component.html
+++ b/frontend/src/app/shared/components/button/button.component.html
@@ -1,6 +1,8 @@
 <button
-  [ngClass]="buttonClasses"
+  [ngClass]="buttonStyle"
   [type]="type"
 >
-  <span [ngClass]="spanClasses">{{ label }}</span>
+  <div [ngClass]="buttonTextStyle">
+    <ng-content></ng-content>
+  </div>
 </button>
