--- a/frontend/src/app/shared/components/cart-drawer/cart-drawer.component.html
+++ b/frontend/src/app/shared/components/cart-drawer/cart-drawer.component.html
@@ -3,6 +3,7 @@
     <div class="cart-drawer__header">
       <div class="cart-drawer__title-wrapper">
         <h6 class="h6">Cart</h6>
+
         <button
           class="cart-drawer__close-button visible-mobile"
           (click)="closeDrawer()"
@@ -15,9 +16,11 @@
             loading="lazy"
             alt="close"
           >
+
           <span class="visually-hidden">Close cart drawer</span>
         </button>
       </div>
+
       <div class="cart-drawer__content">
         product-cards
       </div>
@@ -28,18 +31,21 @@
           <span class="cart-drawer__subtotal-title">Subtotal</span>
           <span class="cart-drawer__subtotal-price">$99.00</span>
         </div>
+
         <div class="cart-drawer__total">
           <span class="cart-drawer__total-title h7">Total</span>
           <span class="cart-drawer__total-price h7">$234.00</span>
         </div>
       </div>
+
       <div class="cart-drawer__checkout-wrapper">
-        <app-button class="cart-drawer__button-checkout" label="Checkout"/>
+        <app-button class="cart-drawer__button-checkout">Checkout</app-button>
         <app-button
           class="cart-drawer__button-cart"
-          label="View Cart"
           [style]="'outlined'"
-        />
+        >
+          View Cart
+        </app-button>
       </div>
     </div>
   </div>
