--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -2,7 +2,7 @@ body {
   font-family: var(--font-family-text);
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.28;
+  line-height: 24px;
   color: var(--neutral-4-color);
   background-color: var(--background-color);
 }
