--- a/frontend/src/app/features/auth/login-form/login-form.component.scss
+++ b/frontend/src/app/features/auth/login-form/login-form.component.scss
@@ -45,6 +45,7 @@
     }
 
     &-input {
+      width: 100%;
       height: 50px;
 
       @include desktop {
@@ -77,6 +78,7 @@
   }
 
   &__button {
+    width: 100%;
     height: var(--button-height-medium);
   }
 }
