--- a/frontend/src/app/features/auth/register-form/register-form.component.scss
+++ b/frontend/src/app/features/auth/register-form/register-form.component.scss
@@ -45,7 +45,8 @@
     }
 
     &-input {
-      height: 50px;
+      width: 100%;
+      height: var(--input-height-large);
 
       @include desktop {
         height: 40px;
@@ -73,6 +74,7 @@
   }
 
   &__button {
+    width: 100%;
     height: var(--button-height-medium);
   }
 }
