--- a/frontend/src/app/shared/components/button/button.component.scss
+++ b/frontend/src/app/shared/components/button/button.component.scss
@@ -3,17 +3,18 @@
 
 :host {
   display: block;
+  width: 150px;
+  height: var(--button-height-medium);
 }
 
 .button {
   @include reset-button;
   @include flex-center(true);
 
-  height: 100%;
-  width: 100%;
-
   &--primary,
   &--rounded {
+    width: 100%;
+    height: 100%;
     background-color: var(--neutral-7-color);
     border: 1px solid var(--neutral-7-color);
     color: var(--neutral-1-color);
