--- a/frontend/src/app/shared/components/input/input.component.scss
+++ b/frontend/src/app/shared/components/input/input.component.scss
@@ -1,31 +1,28 @@
 :host {
   display: block;
+  width: 150px;
+  height: var(--input-height-medium);
 }
 
 .input-field {
-  width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+  transition-duration: var(--transition-duration);
+
+  &::after {
+    content: "";
+    position: absolute;
+    height: 1px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background-color: var(--neutral-3-color);
+  }
 
   &:focus {
     outline: none;
-  }
-
-  &__inner {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    position: relative;
-    transition-duration: var(--transition-duration);
-
-    &::after {
-      content: "";
-      position: absolute;
-      height: 1px;
-      width: 100%;
-      bottom: 0;
-      left: 0;
-      background-color: var(--neutral-3-color);
-    }
   }
 
   &__prefix,
@@ -36,15 +33,15 @@
 
   &__control {
     padding: 0 5px;
-    height: 100%;
     width: 100%;
+    height: 100%;
     border: none;
     outline: none;
     color: var(--neutral-7-color);
   }
 
   &__control:focus,
-  &__inner:focus-within {
+  &:focus-within {
     background-color: var(--neutral-2-color);
   }
 
