--- a/frontend/src/app/shared/components/product/product-card/product-card.component.html
+++ b/frontend/src/app/shared/components/product/product-card/product-card.component.html
@@ -45,7 +45,7 @@
         />
       </div>
       <div class="card__title">{{ title }}</div>
-      <div class="card__price">{{ price }}</div>
+      <div class="card__price">${{ price }}</div>
       <div class="card__description">{{ description }}</div>
     </div>
 
