--- a/frontend/src/app/shared/components/product/product-filter/product-filter.component.html
+++ b/frontend/src/app/shared/components/product/product-filter/product-filter.component.html
@@ -14,7 +14,7 @@
   <div class="product-filter__group">
     <span class="product-filter__group-title">CATEGORIES</span>
 
-    <div class="product-filter__group-content" appScrollbar>
+    <div class="product-filter__group-content" appScrollbar scrollbarMaxHeight="240px">
       @for (category of rootCategories; track category.id) {
         <app-button
           class="product-filter__category-button"
