--- a/frontend/src/app/shared/components/product/product-list/product-list.component.scss
+++ b/frontend/src/app/shared/components/product/product-list/product-list.component.scss
@@ -1,6 +1,64 @@
+@use 'mixins' as *;
+
 .product-list {
   display: grid;
   grid-template-columns: 1fr 3fr;
   padding-top: 60px;
   padding-bottom: 100px;
+  gap: 24px;
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
+  }
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    height: 40px;
+  }
+
+  &__title {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 32px;
+    color: var(--neutral-7-color);
+  }
+
+  &__controls {
+    display: flex;
+    align-items: center;
+    column-gap: 32px;
+  }
+
+  &__grid {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 24px;
+  }
+
+  &__card {
+
+    &:nth-child(3n + 1) {
+      justify-self: start;
+    }
+
+    &:nth-child(3n + 2) {
+      justify-self: center;
+    }
+
+    &:nth-child(3n + 3) {
+      justify-self: end;
+    }
+  }
+
+  &__pagination {
+    @include flex-center;
+  }
+
+  &__show-more-button {
+    height: var(--button-height-small);
+    font-size: var(--button-font-size-s);
+  }
 }
