--- a/frontend/src/app/shared/layouts/header/header.component.html
+++ b/frontend/src/app/shared/layouts/header/header.component.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="header__action-profile hidden-mobile">
-        <a class="header__action-profile-link" href="#">
+        <a class="header__action-profile-link" href="/profile">
           <img
             ngSrc="/assets/svgs/profile.svg"
             width="24"
