--- a/frontend/src/app/shared/layouts/header/components/cart-action/cart-action.component.scss
+++ b/frontend/src/app/shared/layouts/header/components/cart-action/cart-action.component.scss
@@ -1,5 +1,5 @@
-@use 'mixins' as *;
-@use 'media' as *;
+@use '../../../../../../styles/mixins' as *;
+@use '../../../../../../styles/media' as *;
 
 .cart-action {
   display: flex;
